--- a/Audit and visualization script.ipynb
+++ b/Audit and visualization script.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import the libraries required\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -450,6 +451,7 @@
     }
    ],
    "source": [
+    "#read the csv file\n",
     "import pandas as pd    \n",
     "data = pd.read_csv(\"D:\\Music-recommendation-database-main\\Music-recommendation-database-main\\Data\\sourceData.csv\")\n",
     "data"
@@ -878,6 +880,7 @@
     }
    ],
    "source": [
+    "#sort the data according to no of times played\n",
     "data = data.sort_values('No of times Songs Played')\n",
     "data"
    ]
@@ -3828,6 +3831,7 @@
     }
    ],
    "source": [
+    "#check for null data\n",
     "data3.isnull().sum()"
    ]
   },
@@ -3858,6 +3862,7 @@
     }
    ],
    "source": [
+    "#plot a bar graph to represent null data from source data\n",
     "msno.bar(data2)"
    ]
   },
@@ -3888,6 +3893,7 @@
     }
    ],
    "source": [
+    "#plot a bar graph to show null data after cleaning\n",
     "msno.bar(data3)"
    ]
   },
@@ -3918,6 +3924,7 @@
     }
    ],
    "source": [
+    "#plot a matrix graph to show null data from source data\n",
     "msno.matrix(data2)"
    ]
   },
@@ -3948,6 +3955,7 @@
     }
    ],
    "source": [
+    "#plot a matrix graph to show null data after cleaning of data\n",
     "msno.matrix(data3)"
    ]
   },
@@ -4121,7 +4129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
